test_suite5/ALAN/test_suite/alan-2022-examples/passing/000450_deriv.alan
source N3 function d3() begin v[H * R] := 65 end begin relax end
