test_suite5/ALAN/test_suite/alan-2022-examples/failing/009040_mutation.alan
source Q function Nox(boolean "" g) begin relax end begin relax end
